# Stan-s-ML-Stack

./: .dockerignore  .gitignore  .pr_description.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCKER_README.md  Dockerfile  Dockerfile.lightweight  GEMINI.md  LICENSE  MANIFEST.in  MIGRATION.md  PHASE_4_DOCUMENTATION.md  PR5_MERGE_SUMMARY.md  PR_5_ASSESSMENT.md  README.md  README_outline.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  VERSION  benchmark_report.md  benchmark_results.json  build_and_push_docker.sh  clean_status.py  commit_message.txt  docker-compose.yml  finalize_status.py  fix_megatron_compatibility.sh  flash_attn_config.sh  patch_onnx.py  patch_status.py  previous_benchmark.json  push_to_dockerhub.sh  pyproject.toml  python3.12  requirements.txt  (+11 more)
.antigravitycli/: 6953c09c-5956-4165-8b49-0800fe29bb81.json
.github/: CICD_SETUP.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
archive/: README.md
assets/: ml_stack_logo_ascii.txt
benchmarks/: flash_attention_benchmark.py  memory_bandwidth_benchmark.py
branding/: README.md  generate_images.py  image_prompts.md
code_indexer/: api_key_stats.json
core/flash_attention/: CMakeLists.txt  __init__.py  flash_attention_amd.py  flash_attention_amd_cuda.cpp  flash_attn_amd_README.md  setup_flash_attn_amd.py
crates/hardware/: Cargo.toml
crates/hardware/src/: architecture.rs  discovery.rs  filter.rs  gpu.rs  lib.rs  rocm.rs
crates/installers/: Cargo.toml
crates/installers/benches/: installer_benchmarks.rs
crates/installers/code_indexer/: api_key_stats.json
crates/installers/src/: aiter.rs  bitsandbytes.rs  builder.rs  common.rs  deepspeed.rs  flash_attn.rs  gpg.rs  lib.rs  megatron.rs  migraphx.rs  onnx.rs  package_manager.rs  profiles.rs  pytorch.rs  pytorch_profiler.rs  repair.rs  repository.rs  rocm.rs  rocm_smi.rs  triton.rs  verification.rs  vllm.rs  wandb.rs
crates/installers/tests/: aiter_tests.rs  bitsandbytes_tests.rs  deepspeed_tests.rs  migraphx_tests.rs  pytorch_profiler_tests.rs  rocm_smi_tests.rs  wandb_tests.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/code_indexer/: api_key_stats.json
crates/integration-tests/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: animations.rs  app.rs  components.rs  events.rs  lib.rs  main.rs  screens.rs
docs/: BENCHMARK_RESULTS.md  BENCHMARK_TASKS.md  ENTERPRISE_DOCUMENTATION_INDEX.md  INSTALLER_STATUS.md  MIGRATION.md  MIGRATION_GUIDE.md  MULTI_CHANNEL_GUIDE.md  PR_ROCM_STABILIZATION_2026-02.md  Phase_2_Component_Refinement_Report.md  RUSTY_STACK_BENCHMARK_PLAN.md  RUST_PORT_GUIDE.md  UI_Rebuild_Final_Recommendations.md  _config.yml  index.md  ml_stack_master_guide.md  ml_stack_master_guide_part1.md  ml_stack_master_guide_part5.md  ml_stack_master_guide_part7.md  phase-tzar-review-final.md  phase-tzar-review-final.md.bak  rebuild_plan.md  rusty_stack_guide.md
examples/: debug_flash_attn.py  migraphx_example.py  mpi_pytorch_example.py  pytorch_gpu_debug.py  pytorch_gpu_verify.py
interim_fix/: rusty_stack_installer.sh
maestro/: .claude-hud.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow-config.json
mlstack-installer/: Dockerfile  Makefile  README.md  build.sh  go.mod  go.sum  main.go  system_integration.sh
rusty-stack/: Cargo.toml  build.rs  debug_sort.rs  fix-benchmark-status.txt  fix-cwd-props.txt  fix-git-checkout.txt  fix-pacman-python.txt  fix-perms-status.txt  fix-rocm-force-reinstall.txt  scout-component-detection.md  scout-logging-errors.md  scout-script-execution.md  scout-update-ux-logging.md  scout-update-ux.md  scripts
rusty-stack/.gemini/hooks/: tirith-security-guard-gemini.py
rusty-stack/.pi/extensions/: guardrails.json  guardrails.v0.json
rusty-stack/scout/: installer-git-cwd-mapping.md  reinstall-benchmark-scout.md
rusty-stack/src/: app.rs  benchmark_logs.rs  component_status.rs  config.rs  hardware.rs  installer.rs  lib.rs  logging.rs  main.rs  state.rs
rusty-stack/src/adapter/: legacy_adapter.rs  mod.rs  rust_adapter.rs
rusty-stack/src/benchmark_runners/: mod.rs
rusty-stack/src/benchmarks/: mod.rs
rusty-stack/src/bootstrap/: env_setup.rs  install.rs  launcher.rs  mod.rs
rusty-stack/src/component_status/: component_status_tests.rs
rusty-stack/src/core/: manifest.rs  mod.rs  plan.rs  telemetry_types.rs  types.rs  validation.rs  verification.rs
rusty-stack/src/core/fixtures/: baseline_manifest.json
rusty-stack/src/installers/: mod.rs
rusty-stack/src/installers/common/: benchmark_common.rs  distro.rs  env_validation.rs  guard.rs  mod.rs  package_manager.rs  package_mappings.rs  rocm_env.rs  sealed_token.rs  telemetry.rs  ui_helper.rs  utils.rs
rusty-stack/src/installers/components/: aiter.rs  amdgpu_drivers.rs  bitsandbytes_multi.rs  comfyui.rs  deepspeed.rs  fastvideo.rs  flash_attention_ck.rs  llama_cpp.rs  megatron.rs  migraphx_multi.rs  migraphx_python.rs  ml_stack.rs  mod.rs  mpi4py.rs  onnxruntime.rs  permanent_env.rs  pytorch.rs  pytorch_profiler.rs  repair.rs  rocm.rs  rocm_smi.rs  textgen.rs  triton.rs  vllm_multi.rs  vllm_studio.rs  wandb.rs
rusty-stack/src/orchestrator/: apply.rs  migration.rs  mod.rs  planner.rs  upgrade.rs  verify.rs
rusty-stack/src/platform/: control_shell.rs  detection.rs  environment.rs  linux.rs  mod.rs  path_bridge.rs  registry.rs  service.rs  windows.rs  wsl.rs
rusty-stack/src/telemetry/: benchmark.rs  mod.rs  opt_in.rs  payload.rs  submit.rs
rusty-stack/src/verification/: mod.rs
rusty-stack/src/widgets/: benchmarks_charts.rs  benchmarks_page.rs  mod.rs
rusty-stack/tests/: adapter_parity.rs  installer_dispatch.rs  integration.rs  llama_cpp_auth_test.rs  migration_wave1.rs  rusty_cli.rs  update_apply.rs  update_cli.rs  upgrade_cli.rs  verify_bench_cli.rs  windows_wsl.rs
rusty_stack_wrapper/: __init__.py  cli.py
scripts/: __init__.py  analyze_nvidia_dependency_risk.sh  build_flash_attn_amd.sh  build_flash_attn_amd_part1.sh  build_flash_attn_amd_part2.sh  build_onnxruntime.sh  build_onnxruntime_multi.sh  build_onnxruntime_outline.sh  build_onnxruntime_part2.sh  install.sh  (+76 more)
(+1213 files in other folders)
