[workspace]
members = [
    "crates/hardware",
    "crates/installers",
    "crates/tui",
    "crates/integration-tests",
    "rusty-stack",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/scooter-lacroix/Stan-s-ML-Stack"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
libc = "0.2"
sysinfo = "0.30"

# Internal crates
mlstack-hardware = { path = "crates/hardware" }
mlstack-installers = { path = "crates/installers" }
mlstack-tui = { path = "crates/tui" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
