[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stans-ml-stack"
dynamic = ["version"]
description = "A comprehensive machine learning environment optimized for AMD GPUs"
readme = "README.md"
authors = [
    {name = "Stanley Chisango (Scooter Lacroix)", email = "scooterlacroix@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch>=2.6.0",
    "onnxruntime",
    "psutil",
    "tqdm",
    "requests",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/scooter-lacroix/Stans_MLStack"
Issues = "https://github.com/scooter-lacroix/Stans_MLStack/issues"
Documentation = "https://github.com/scooter-lacroix/Stans_MLStack/wiki"

[project.scripts]
ml-stack-install = "scripts.install_ml_stack_curses:main"
ml-stack-verify = "scripts.enhanced_verify_installation_wrapper:main"
ml-stack-repair = "scripts.repair_ml_stack_wrapper:main"

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
