[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Rusty-Stack"
dynamic = ["version"]
description = "A comprehensive machine learning environment optimized for AMD GPUs"
readme = "README.md"
authors = [
    {name = "Stanley Chisango (Scooter Lacroix)", email = "scooterlacroix@gmail.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/scooter-lacroix/Stan-s-ML-Stack"
Issues = "https://github.com/scooter-lacroix/Stan-s-ML-Stack/issues"
Documentation = "https://github.com/scooter-lacroix/Stan-s-ML-Stack/wiki"

[project.scripts]
ml-stack-install = "rusty_stack_wrapper.cli:install_main"
ml-stack-verify = "rusty_stack_wrapper.cli:verify_main"
ml-stack-repair = "rusty_stack_wrapper.cli:repair_main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["rusty_stack_wrapper*"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
