[package]
name = "rusty-stack"
version = "0.1.0"
edition = "2021"

[features]
default = ["tui", "telemetry-submit", "unix-deps"]
tui = ["crossterm", "ratatui"]
telemetry-submit = ["reqwest", "tokio"]
unix-deps = ["libc"]

[[bin]]
name = "rusty-stack"
path = "src/main.rs"
required-features = ["tui", "unix-deps"]

[[bin]]
name = "rusty"
path = "src/bin/rusty.rs"
required-features = ["unix-deps"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38"
dirs = "6"
clap = { version = "4", features = ["derive"] }
regex = "1"
sha2 = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter", "time", "local-time"] }
tracing-appender = "0.2"
console = "0.16"
time = { version = "0.3", features = ["formatting", "macros"] }
ureq = { version = "3", features = ["json"] }
semver = "1"

# Optional: TUI (cross-platform but only needed for installer)
crossterm = { version = "0.29", optional = true }
ratatui = { version = "0.30", optional = true }

# Optional: Unix-only (libc for geteuid, etc.)
libc = { version = "0.2", optional = true }

# Optional: Telemetry HTTPS submission
reqwest = { version = "0.13", features = ["json"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tracing-test = "0.2"
