[package]
name = "mlstack-hardware"
version = "0.1.0"
edition = "2021"
description = "Hardware detection module for Stan's ML Stack with ROCm and GPU architecture support"
license = "MIT"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3.0"
