[package]
name = "mlstack-installers"
version = "0.1.0"
edition = "2021"
description = "ML Stack installers for ROCm, PyTorch, and ML components"
license = "MIT"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["process", "fs", "time"] }
reqwest = { version = "0.11", features = ["stream"] }
semver = "1.0"
async-trait = "0.1"
libc = "0.2"
num_cpus = "1.0"
mlstack-hardware = { path = "../hardware" }
mlstack-env = { path = "../env" }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "fs", "time"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "installer_benchmarks"
harness = false
