[package]
name = "mlstack-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
mlstack-hardware = { path = "../hardware" }
mlstack-env = { path = "../env" }
mlstack-installers = { path = "../installers" }
sysinfo = "0.30"
rand = "0.8"
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
