[package]
name = "mlstack-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Stan's ML Stack with animations and progress indicators"
license = "MIT"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
indicatif = "0.17"
chrono = "0.4"
mlstack-hardware = { path = "../hardware" }
mlstack-env = { path = "../env" }
mlstack-installers = { path = "../installers" }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "mlstack-tui"
path = "src/main.rs"
